question_17.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:  
  creationTimestamp: null
  labels:
    run: test-init-container
  name: test-init-container
spec:
  replicas: 1
  selector:
    matchLabels:
      run: test-init-container
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        run: test-init-container
    spec:
      containers:
      - image: nginx:1.17.3-alpine
        name: test-init-container
        volumeMounts:
        - name: web-content
          mountPath: /usr/share/nginx/html
      volumes:
      - name: web-content
        emptyDir: {}
