question_18_service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  name: manager-api-deployment
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    run: manager-api-deployment
status:
  loadBalancer: {}
