networking_04.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: sun-netpol
  namespace: sun
spec:
  podSelector: {}
  ingress: []
